--- a/app/src/main/res/layout/dialog_sua_taikhoan.xml
+++ b/app/src/main/res/layout/dialog_sua_taikhoan.xml
@@ -68,6 +68,7 @@
                 android:hint="Tài khoản"
                 android:inputType="text"
                 android:padding="10dp"
+                android:drawableStart="@drawable/user30"
 
                 />
         </LinearLayout>
@@ -96,6 +97,7 @@
                 android:hint="Mật khẩu"
                 android:inputType="text"
                 android:padding="10dp"
+                android:drawableStart="@drawable/password"
 
                 />
         </LinearLayout>
@@ -123,6 +125,7 @@
                 android:hint="Họ tên"
                 android:padding="10dp"
                 android:inputType="text"
+                android:drawableStart="@drawable/user30"
 
                 />
         </LinearLayout>
@@ -151,6 +154,7 @@
                 android:hint="Giá sản phẩm"
                 android:inputType="number"
                 android:padding="10dp"
+                android:drawableStart="@drawable/price30"
                 />
         </LinearLayout>
 
@@ -174,9 +178,10 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/edit_dn"
                 android:gravity="center_vertical"
-                android:hint="Họ tên"
+                android:hint="Địa chỉ"
                 android:padding="10dp"
                 android:inputType="text"
+                android:drawableStart="@drawable/address"
                 />
         </LinearLayout>
 
