--- a/app/src/main/res/layout/dialog_them_taikhoan.xml
+++ b/app/src/main/res/layout/dialog_them_taikhoan.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:gravity="center"
+    android:background="@color/ethereal_blue"
     >
 
     <ImageView
@@ -17,8 +18,8 @@
         android:layout_marginTop="10dp"
         android:text="THÊM TÀI KHOẢN"
         android:textSize="22dp"
-        android:textColor="#3F51B5"
-        android:fontFamily="@font/open_sans_bold"
+        android:textColor="@color/colortextChu"
+        android:fontFamily="@font/fonttieudeextrabold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
@@ -36,17 +37,19 @@
             android:layout_height="wrap_content"
             >
             <TextView
-                android:fontFamily="@font/open_sans_regular"
+                android:fontFamily="@font/fonttieudeextrabold"
                 android:text="Tài khoản:"
                 android:textSize="16sp"
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
+                android:textColor="@color/colortextChu"
                 />
             <EditText
                 android:id="@+id/ed_taikhoan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/btn_dn"
+                android:background="@drawable/edit_dn"
+                android:drawableStart="@drawable/user30"
                 android:hint="Tài khoản"
                 android:inputType="text"
                 android:padding="10dp"
@@ -60,22 +63,23 @@
             android:orientation="horizontal">
 
             <TextView
-                android:fontFamily="@font/open_sans_regular"
+                android:fontFamily="@font/fonttieudeextrabold"
                 android:layout_width="90dp"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:text="Mật khẩu:  "
+                android:textColor="@color/colortextChu"
                 android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/ed_matkhau"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/btn_dn"
+                android:background="@drawable/edit_dn"
                 android:hint="Mật khẩu"
+                android:drawableStart="@drawable/password"
                 android:inputType="text"
-                android:padding="10dp"
-                />
+                android:padding="10dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -85,8 +89,9 @@
             android:layout_height="wrap_content"
             >
             <TextView
-                android:fontFamily="@font/open_sans_regular"
+                android:fontFamily="@font/fonttieudeextrabold"
                 android:text="Họ tên:"
+                android:textColor="@color/colortextChu"
                 android:textSize="16sp"
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
@@ -95,8 +100,9 @@
                 android:id="@+id/ed_hoten"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/btn_dn"
+                android:background="@drawable/edit_dn"
                 android:hint="Họ tên"
+                android:drawableStart="@drawable/user30"
                 android:inputType="text"
                 android:padding="10dp"
                 />
@@ -109,8 +115,9 @@
             android:layout_height="wrap_content"
             >
             <TextView
-                android:fontFamily="@font/open_sans_regular"
+                android:fontFamily="@font/fonttieudeextrabold"
                 android:text="SĐT:"
+                android:textColor="@color/colortextChu"
                 android:textSize="16sp"
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
@@ -119,8 +126,9 @@
                 android:id="@+id/ed_sdt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/btn_dn"
+                android:background="@drawable/edit_dn"
                 android:hint="Số điện thoại"
+                android:drawableStart="@drawable/telephone"
                 android:inputType="number"
                 android:padding="10dp"
                 />
@@ -133,17 +141,19 @@
             android:layout_height="wrap_content"
             >
             <TextView
-                android:fontFamily="@font/open_sans_regular"
+                android:fontFamily="@font/fonttieudeextrabold"
                 android:text="Địa chỉ:"
                 android:textSize="16sp"
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
+                android:textColor="@color/colortextChu"
                 />
             <EditText
                 android:id="@+id/ed_diachi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/btn_dn"
+                android:background="@drawable/edit_dn"
+                android:drawableStart="@drawable/address"
                 android:hint="Địa chỉ"
                 android:inputType="text"
                 android:padding="10dp"
@@ -166,9 +176,9 @@
                 android:layout_weight="1"
                 android:background="@drawable/btn_qmk"
                 android:text="THÊM"
-                android:fontFamily="@font/open_sans_bold"
+                android:fontFamily="@font/fonttieudeextrabold"
                 android:textSize="18sp"
-                android:textColor="#ffff" />
+                android:textColor="@color/colortextChu" />
 
             <TextView
                 android:layout_marginLeft="10dp"
@@ -179,9 +189,9 @@
                 android:layout_weight="1"
                 android:background="@drawable/btn_qmk"
                 android:text="HỦY"
-                android:fontFamily="@font/open_sans_bold"
+                android:fontFamily="@font/fonttieudeextrabold"
                 android:textSize="18sp"
-                android:textColor="#ffff" />
+                android:textColor="@color/colortextChu" />
 
         </LinearLayout>
 
