--- a/app/src/main/res/layout/item_theloai.xml
+++ b/app/src/main/res/layout/item_theloai.xml
@@ -41,7 +41,9 @@
                     android:fontFamily="@font/open_sans_regular"
                     android:text="Mã loại"
                     android:textSize="15sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:textColor="@color/colortextChu"
+                    />
 
             </LinearLayout>
             <!--            Tên Loại-->
@@ -50,7 +52,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/fonttieudeextrabold"
-
+                android:textColor="@color/colortextChu"
                 android:text="Tên loại"
                 android:textSize="15sp" />
 
