--- a/app/src/main/res/layout/dialog_sua_theloai.xml
+++ b/app/src/main/res/layout/dialog_sua_theloai.xml
@@ -3,8 +3,8 @@
     android:id="@+id/bottomSheet"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    >
+    android:background="@color/ethereal_blue"
+    android:orientation="vertical">
 
     <ImageView
         android:layout_width="80dp"
@@ -17,57 +17,56 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="2dp"
+        android:fontFamily="@font/fonttieudeextrabold"
         android:padding="10dp"
         android:text="SỬA THỂ LOẠI"
         android:textAlignment="center"
-        android:textColor="#3F51B5"
-        android:textSize="22dp"
-        android:fontFamily="@font/open_sans_bold" />
+        android:textColor="@color/colortextChu"
+        android:textSize="22dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:paddingBottom="10dp"
-        android:orientation="vertical"
-        >
+        android:paddingBottom="10dp">
 
         <TextView
-            android:fontFamily="@font/open_sans_regular"
             android:id="@+id/tv_maloai"
-            android:textSize="17sp"
-            android:textStyle="bold"
-            android:text="Mã thể loại:"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            />
+            android:fontFamily="@font/open_sans_regular"
+            android:text="Mã thể loại:"
+            android:textSize="17sp"
+            android:textStyle="bold" />
 
         <LinearLayout
-            android:layout_marginBottom="8dp"
-            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            >
+            android:layout_marginBottom="8dp"
+            android:orientation="vertical">
+
             <TextView
-                android:fontFamily="@font/open_sans_regular"
-                android:text="Tên thể loại:"
-                android:textSize="17sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                />
+                android:fontFamily="@font/fonttieudeextrabold"
+                android:text="Tên thể loại:"
+                android:textColor="@color/colortextChu"
+                android:textSize="17sp" />
+
             <EditText
                 android:id="@+id/ed_tenloai"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="1dp"
-                android:background="@drawable/btn_dn"
+                android:background="@drawable/edit_dn"
+                android:drawableStart="@drawable/category_book"
                 android:gravity="center_vertical"
                 android:hint="Tên thể loại"
                 android:inputType="text"
-                android:padding="10dp"
-                />
+                android:padding="10dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -78,29 +77,29 @@
             android:weightSum="2">
 
             <TextView
-                android:gravity="center"
                 android:id="@+id/btn_edit"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:background="@drawable/btn_qmk"
+                android:fontFamily="@font/fonttieudeextrabold"
+                android:gravity="center"
                 android:text="CẬP NHẬT"
-                android:fontFamily="@font/open_sans_bold"
-                android:textSize="18sp"
-                android:textColor="#ffff" />
+                android:textColor="@color/colortextChu"
+                android:textSize="18sp" />
 
             <TextView
-                android:layout_marginLeft="10dp"
-                android:gravity="center"
                 android:id="@+id/btn_cancel"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
+                android:layout_marginLeft="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/btn_qmk"
+                android:fontFamily="@font/fonttieudeextrabold"
+                android:gravity="center"
                 android:text="HỦY"
-                android:fontFamily="@font/open_sans_bold"
-                android:textSize="18sp"
-                android:textColor="#ffff" />
+                android:textColor="@color/colortextChu"
+                android:textSize="18sp" />
 
         </LinearLayout>
 
