--- a/app/src/main/res/layout/fragment_thong_ke_doanh_thu.xml
+++ b/app/src/main/res/layout/fragment_thong_ke_doanh_thu.xml
@@ -1,14 +1,309 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.ThongKeDoanhThu">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:gravity="center"
+    >
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
+        android:padding="10dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+
+        <LinearLayout
+            android:gravity="center"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <ImageView
+                android:layout_marginLeft="20dp"
+                android:src="@drawable/account"
+                android:textStyle="bold"
+                android:textSize="17dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                />
+            <TextView
+                android:fontFamily="@font/open_sans_regular"
+                android:textSize="16sp"
+                android:layout_weight="1"
+                android:layout_marginLeft="20dp"
+                android:text="Tổng tài khoản: "
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                />
+            <TextView
+                android:fontFamily="@font/open_sans_regular"
+                android:layout_weight="1"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/cinderella"
+                android:id="@+id/tv_tongtaikhoan"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="0 tài khoản"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:gravity="center"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <ImageView
+                android:layout_marginLeft="20dp"
+                android:src="@drawable/book"
+                android:textStyle="bold"
+                android:textSize="17dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                />
+            <TextView
+                android:fontFamily="@font/open_sans_regular"
+                android:textSize="16sp"
+                android:layout_weight="1"
+                android:layout_marginLeft="20dp"
+                android:text="Tổng sản phẩm: "
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                />
+            <TextView
+                android:fontFamily="@font/open_sans_regular"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/cinderella"
+                android:id="@+id/tv_tongsanpham"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="0 sản phẩm"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:gravity="center"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <ImageView
+                android:layout_marginLeft="20dp"
+                android:src="@drawable/anh_hoadon"
+                android:textStyle="bold"
+                android:textSize="17dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                />
+            <TextView
+                android:fontFamily="@font/open_sans_regular"
+                android:textSize="16sp"
+                android:layout_weight="1"
+                android:layout_marginLeft="20dp"
+                android:text="Tổng hóa đơn: "
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                />
+            <TextView
+                android:fontFamily="@font/open_sans_regular"
+                android:layout_weight="1"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/cinderella"
+                android:id="@+id/tv_tonghoadon"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="0 hóa đơn"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:gravity="center"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <androidx.cardview.widget.CardView
+                android:layout_marginLeft="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="25dp"
+                >
+                <ImageView
+                    android:src="@drawable/doanhthu"
+                    android:textStyle="bold"
+                    android:textSize="17dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    />
+            </androidx.cardview.widget.CardView>
+            <TextView
+                android:fontFamily="@font/open_sans_regular"
+                android:textSize="16sp"
+                android:layout_weight="1"
+                android:layout_marginLeft="20dp"
+                android:text="Tổng doanh thu: "
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                />
+            <TextView
+                android:fontFamily="@font/open_sans_regular"
+                android:layout_weight="1"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/cinderella"
+                android:id="@+id/tv_tongdoanhthu"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="0 VNĐ"
+                />
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        >
 
-</FrameLayout>
+        <TextView
+            android:fontFamily="@font/open_sans_bold"
+            android:layout_marginBottom="10dp"
+            android:layout_gravity="center"
+            android:textSize="20sp"
+            android:text="THỐNG KÊ DOANH SỐ"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+
+        <TextView
+            android:fontFamily="@font/open_sans_regular"
+            android:textSize="16dp"
+            android:text="Ngày bắt đầu:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+
+        <EditText
+            android:fontFamily="@font/open_sans_regular"
+            android:id="@+id/ed_ngaybatdau"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Chọn ngày bắt đầu"
+            android:padding="7dp"
+            android:textSize="15sp"
+            android:layout_margin="7dp"
+            android:background="#cccc"
+            />
+
+        <TextView
+            android:fontFamily="@font/open_sans_regular"
+            android:textSize="16dp"
+            android:text="Ngày kết thúc:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+
+        <EditText
+            android:fontFamily="@font/open_sans_regular"
+            android:id="@+id/ed_ngayketthuc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Chọn ngày kết thúc"
+            android:padding="7dp"
+            android:textSize="15sp"
+            android:layout_margin="7dp"
+            android:background="#cccc"
+            />
+
+        <TextView
+            android:gravity="center"
+            android:layout_marginTop="7dp"
+            android:id="@+id/btn_thongke"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:fontFamily="@font/open_sans_bold"
+            android:textSize="18sp"
+            android:textColor="#ffff"
+            android:background="@drawable/btn_qmk"
+            android:text= "THỐNG KÊ"
+            />
+
+        <LinearLayout
+            android:padding="10dp"
+            android:layout_marginTop="15dp"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+                <TextView
+                    android:fontFamily="@font/open_sans_regular"
+                    android:textSize="17dp"
+                    android:text="Số lượng hóa đơn:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+                <TextView
+                    android:gravity="right"
+                    android:fontFamily="@font/open_sans_regular"
+                    android:layout_weight="1"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/cinderella"
+                    android:id="@+id/tv_slhoadon"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="0 đơn"
+                    />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+                <TextView
+                    android:fontFamily="@font/open_sans_regular"
+                    android:textSize="17dp"
+                    android:text="Doanh thu:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+                <TextView
+                    android:fontFamily="@font/open_sans_regular"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/cinderella"
+                    android:id="@+id/tv_doanhthu"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="0 VNĐ"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+
+    </LinearLayout>
+
+</LinearLayout>
