--- a/app/src/main/res/layout/fragment_cuahang.xml
+++ b/app/src/main/res/layout/fragment_cuahang.xml
@@ -190,7 +190,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/fonttieuderegular"
-                            android:text="Giáo Khoa"
+                            android:text="Thiếu nhi"
                             android:textSize="13sp"
                             android:textStyle="bold"
                             android:textColor="@color/colortextChu"
