Đã hoàn thành chức năng HorizontalScrollView trong quản lí hoá đơn, gồm đang xử lí và đã xác nhận.

--- a/app/src/main/res/layout/fragment_tai_khoan.xml
+++ b/app/src/main/res/layout/fragment_tai_khoan.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="@color/cinderella"
+    android:background="#89BEDC"
     tools:context=".Fragment.TaiKhoanFragment">
 
     <LinearLayout
