--- a/app/src/main/res/layout/activity_chi_tiet_san_pham.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_san_pham.xml
@@ -161,6 +161,23 @@
                     />
             </LinearLayout>
         </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <TextView
+                android:id="@+id/tv_solgHangTon"
+                android:fontFamily="@font/open_sans_regular"
+                android:textSize="16sp"
+                android:text="Số lượng hàng tồn: "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colortextChu"
+                android:textStyle="bold"
+                />
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_marginTop="10dp"
@@ -180,22 +197,9 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
-            <TextView
-                android:fontFamily="@font/open_sans_regular"
-                android:layout_weight="1"
-                android:textSize="16sp"
-                android:text="@string/vanBanGia"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                />
 
-        </LinearLayout>
+
+
 
     </LinearLayout>
 
