--- a/app/src/main/res/layout/dialog_them_sanpham.xml
+++ b/app/src/main/res/layout/dialog_them_sanpham.xml
@@ -134,6 +134,32 @@
 
                 />
         </LinearLayout>
+        <LinearLayout
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <TextView
+                android:fontFamily="@font/fonttieudeextrabold"
+                android:text="Số lg tồn:"
+                android:textSize="16sp"
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colortextChu"
+                />
+            <EditText
+                android:id="@+id/ed_solgTonKhoSP_them"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit_dn"
+                android:hint="Số hàng tồn kho "
+                android:inputType="number"
+                android:padding="10dp"
+                android:drawableStart="@drawable/quanity"
+
+                />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
