--- a/app/src/main/res/layout/item_sanpham.xml
+++ b/app/src/main/res/layout/item_sanpham.xml
@@ -77,6 +77,15 @@
                 android:textColor="@color/colortextChu"
                 android:textSize="13sp"
                 android:textStyle="bold" />
+            <TextView
+                android:id="@+id/tv_soluongTonKho"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/fonttieudeextrabold"
+                android:text="Số lượng tồn kho"
+                android:textColor="@color/colortextChu"
+                android:textSize="13sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
