--- a/app/src/main/res/layout/fragment_quan_ly_hoa_don.xml
+++ b/app/src/main/res/layout/fragment_quan_ly_hoa_don.xml
@@ -60,20 +60,23 @@
             <Button
                 android:id="@+id/btn_chuaxn"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:text="Chưa Xác Nhận"
                 android:layout_marginRight="3dp"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:background="@drawable/background_button"
 
                 />
             <Button
                 android:id="@+id/btn_daxn"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:text="Đã Xác Nhận"
                 android:layout_marginRight="3dp"
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp"
-
+                android:background="@drawable/background_button"
                 />
 
         </LinearLayout>
